parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARTICULO
    VERBO
    VERBO_PRESENTE_BE_1
    VERBO_PRESENTE_BE_2
    VERBO_PRESENTE_BE_3

Grammar

Rule 0     S' -> parrafo
Rule 1     parrafo -> frase
Rule 2     frase -> frase oracion
Rule 3     frase -> palabra
Rule 4     frase -> oracion
Rule 5     oracion -> oracion_presente CONECTOR oracion
Rule 6     oracion -> oracion_pasado CONECTOR oracion
Rule 7     oracion -> oracion_futuro CONECTOR oracion
Rule 8     oracion -> oracion_pregunta CONECTOR oracion
Rule 9     oracion -> oracion_presente_perfecto oracion
Rule 10    oracion -> oracion_presente
Rule 11    oracion -> oracion_pasado
Rule 12    oracion -> oracion_futuro
Rule 13    oracion -> oracion_pregunta
Rule 14    oracion -> oracion_presente_perfecto
Rule 15    oracion_presente -> sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
Rule 16    oracion_presente -> sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
Rule 17    oracion_presente -> sujeto VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
Rule 18    oracion_presente -> sujeto VERBO_PRESENTE CONECTOR OBJETO
Rule 19    oracion_presente -> sujeto VERBO_PRESENTE OBJETO
Rule 20    oracion_presente -> sujeto VERBO_PRESENTE
Rule 21    oracion_presente -> SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
Rule 22    oracion_presente -> SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
Rule 23    oracion_presente -> SUJETO_TERCERA_PERSONA VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
Rule 24    oracion_presente -> SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA
Rule 25    oracion_presente -> SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA OBJETO
Rule 26    oracion_pasado -> sujeto AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
Rule 27    oracion_pasado -> sujeto VERBO_PASADO CONECTOR OBJETO
Rule 28    oracion_pasado -> sujeto VERBO_PASADO OBJETO
Rule 29    oracion_pasado -> sujeto VERBO_PASADO
Rule 30    oracion_pasado -> SUJETO_TERCERA_PERSONA AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
Rule 31    oracion_pasado -> SUJETO_TERCERA_PERSONA VERBO_PASADO CONECTOR OBJETO
Rule 32    oracion_pasado -> SUJETO_TERCERA_PERSONA VERBO_PASADO OBJETO
Rule 33    oracion_pasado -> SUJETO_TERCERA_PERSONA VERBO_PASADO
Rule 34    oracion_futuro -> sujeto AUXILIAR_FUTURO VERBO_PRESENTE OBJETO
Rule 35    oracion_pregunta -> AUXILIAR_PREGUNTA AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
Rule 36    oracion_pregunta -> AUXILIAR_PREGUNTA DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
Rule 37    oracion_pregunta -> AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
Rule 38    oracion_pregunta -> DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
Rule 39    oracion_presente_perfecto -> sujeto AUXILIAR_HAVE VERBO_PARTICIPIO_PASADO
Rule 40    oracion_presente_perfecto -> SUJETO_TERCERA_PERSONA AUXILIAR_HAS VERBO_PARTICIPIO_PASADO
Rule 41    palabra -> SUJETO
Rule 42    palabra -> VERBO_PRESENTE
Rule 43    palabra -> OBJETO
Rule 44    sujeto -> SUJETO_PRIMERA_PERSONA
Rule 45    sujeto -> SUJETO_SEGUNDA_PERSONA
Rule 46    sujeto_tercera_persona -> SUJETO_TERCERA_PERSONA
Rule 47    objeto -> SUJETO
Rule 48    objeto -> <empty>

Terminals, with rules where they appear

ARTICULO             : 
AUXILIAR_DO          : 15 16 35 37
AUXILIAR_DO_PASADO   : 26 30
AUXILIAR_FUTURO      : 34
AUXILIAR_HAS         : 40
AUXILIAR_HAVE        : 39
AUXILIAR_NEGACION    : 15 16 21 22 26 30
AUXILIAR_PREGUNTA    : 35 36
CONECTOR             : 5 6 7 8 15 17 18 21 23 26 27 30 31
DO_TERCERA_PERSONA   : 21 22 36 38
INTERROGACION        : 35 36 37 38
OBJETO               : 16 18 19 22 25 26 27 28 30 31 32 34 43
OBJETO_PRONOMBRE     : 15 17 21 23
SUJETO               : 41 47
SUJETO_PRIMERA_PERSONA : 44
SUJETO_SEGUNDA_PERSONA : 45
SUJETO_TERCERA_PERSONA : 21 22 23 24 25 30 31 32 33 36 38 40 46
VERBO                : 
VERBO_PARTICIPIO_PASADO : 39 40
VERBO_PASADO         : 27 28 29 31 32 33
VERBO_PRESENTE       : 15 16 17 18 19 20 21 22 23 26 30 34 35 36 37 38 42
VERBO_PRESENTE_BE_1  : 
VERBO_PRESENTE_BE_2  : 
VERBO_PRESENTE_BE_3  : 
VERBO_PRESENTE_TERCERA_PERSONA : 24 25
error                : 

Nonterminals, with rules where they appear

frase                : 1 2
objeto               : 
oracion              : 2 4 5 6 7 8 9
oracion_futuro       : 7 12
oracion_pasado       : 6 11
oracion_pregunta     : 8 13
oracion_presente     : 5 10
oracion_presente_perfecto : 9 14
palabra              : 3
parrafo              : 0
sujeto               : 15 16 17 18 19 20 26 27 28 29 34 35 37 39
sujeto_tercera_persona : 

Parsing method: LALR

state 0

    (0) S' -> . parrafo
    (1) parrafo -> . frase
    (2) frase -> . frase oracion
    (3) frase -> . palabra
    (4) frase -> . oracion
    (41) palabra -> . SUJETO
    (42) palabra -> . VERBO_PRESENTE
    (43) palabra -> . OBJETO
    (5) oracion -> . oracion_presente CONECTOR oracion
    (6) oracion -> . oracion_pasado CONECTOR oracion
    (7) oracion -> . oracion_futuro CONECTOR oracion
    (8) oracion -> . oracion_pregunta CONECTOR oracion
    (9) oracion -> . oracion_presente_perfecto oracion
    (10) oracion -> . oracion_presente
    (11) oracion -> . oracion_pasado
    (12) oracion -> . oracion_futuro
    (13) oracion -> . oracion_pregunta
    (14) oracion -> . oracion_presente_perfecto
    (15) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (16) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (17) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (18) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO
    (19) oracion_presente -> . sujeto VERBO_PRESENTE OBJETO
    (20) oracion_presente -> . sujeto VERBO_PRESENTE
    (21) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (22) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (23) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (24) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA
    (25) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA OBJETO
    (26) oracion_pasado -> . sujeto AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (27) oracion_pasado -> . sujeto VERBO_PASADO CONECTOR OBJETO
    (28) oracion_pasado -> . sujeto VERBO_PASADO OBJETO
    (29) oracion_pasado -> . sujeto VERBO_PASADO
    (30) oracion_pasado -> . SUJETO_TERCERA_PERSONA AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (31) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO CONECTOR OBJETO
    (32) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO OBJETO
    (33) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO
    (34) oracion_futuro -> . sujeto AUXILIAR_FUTURO VERBO_PRESENTE OBJETO
    (35) oracion_pregunta -> . AUXILIAR_PREGUNTA AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (36) oracion_pregunta -> . AUXILIAR_PREGUNTA DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (37) oracion_pregunta -> . AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (38) oracion_pregunta -> . DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (39) oracion_presente_perfecto -> . sujeto AUXILIAR_HAVE VERBO_PARTICIPIO_PASADO
    (40) oracion_presente_perfecto -> . SUJETO_TERCERA_PERSONA AUXILIAR_HAS VERBO_PARTICIPIO_PASADO
    (44) sujeto -> . SUJETO_PRIMERA_PERSONA
    (45) sujeto -> . SUJETO_SEGUNDA_PERSONA

    SUJETO          shift and go to state 5
    VERBO_PRESENTE  shift and go to state 6
    OBJETO          shift and go to state 7
    SUJETO_TERCERA_PERSONA shift and go to state 15
    AUXILIAR_PREGUNTA shift and go to state 17
    AUXILIAR_DO     shift and go to state 14
    DO_TERCERA_PERSONA shift and go to state 16
    SUJETO_PRIMERA_PERSONA shift and go to state 18
    SUJETO_SEGUNDA_PERSONA shift and go to state 19

    parrafo                        shift and go to state 1
    frase                          shift and go to state 2
    oracion                        shift and go to state 3
    palabra                        shift and go to state 4
    oracion_presente               shift and go to state 8
    oracion_pasado                 shift and go to state 9
    oracion_futuro                 shift and go to state 10
    oracion_pregunta               shift and go to state 11
    oracion_presente_perfecto      shift and go to state 12
    sujeto                         shift and go to state 13

state 1

    (0) S' -> parrafo .



state 2

    (1) parrafo -> frase .
    (2) frase -> frase . oracion
    (5) oracion -> . oracion_presente CONECTOR oracion
    (6) oracion -> . oracion_pasado CONECTOR oracion
    (7) oracion -> . oracion_futuro CONECTOR oracion
    (8) oracion -> . oracion_pregunta CONECTOR oracion
    (9) oracion -> . oracion_presente_perfecto oracion
    (10) oracion -> . oracion_presente
    (11) oracion -> . oracion_pasado
    (12) oracion -> . oracion_futuro
    (13) oracion -> . oracion_pregunta
    (14) oracion -> . oracion_presente_perfecto
    (15) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (16) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (17) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (18) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO
    (19) oracion_presente -> . sujeto VERBO_PRESENTE OBJETO
    (20) oracion_presente -> . sujeto VERBO_PRESENTE
    (21) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (22) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (23) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (24) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA
    (25) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA OBJETO
    (26) oracion_pasado -> . sujeto AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (27) oracion_pasado -> . sujeto VERBO_PASADO CONECTOR OBJETO
    (28) oracion_pasado -> . sujeto VERBO_PASADO OBJETO
    (29) oracion_pasado -> . sujeto VERBO_PASADO
    (30) oracion_pasado -> . SUJETO_TERCERA_PERSONA AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (31) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO CONECTOR OBJETO
    (32) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO OBJETO
    (33) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO
    (34) oracion_futuro -> . sujeto AUXILIAR_FUTURO VERBO_PRESENTE OBJETO
    (35) oracion_pregunta -> . AUXILIAR_PREGUNTA AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (36) oracion_pregunta -> . AUXILIAR_PREGUNTA DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (37) oracion_pregunta -> . AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (38) oracion_pregunta -> . DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (39) oracion_presente_perfecto -> . sujeto AUXILIAR_HAVE VERBO_PARTICIPIO_PASADO
    (40) oracion_presente_perfecto -> . SUJETO_TERCERA_PERSONA AUXILIAR_HAS VERBO_PARTICIPIO_PASADO
    (44) sujeto -> . SUJETO_PRIMERA_PERSONA
    (45) sujeto -> . SUJETO_SEGUNDA_PERSONA

    $end            reduce using rule 1 (parrafo -> frase .)
    SUJETO_TERCERA_PERSONA shift and go to state 15
    AUXILIAR_PREGUNTA shift and go to state 17
    AUXILIAR_DO     shift and go to state 14
    DO_TERCERA_PERSONA shift and go to state 16
    SUJETO_PRIMERA_PERSONA shift and go to state 18
    SUJETO_SEGUNDA_PERSONA shift and go to state 19

    oracion                        shift and go to state 20
    oracion_presente               shift and go to state 8
    oracion_pasado                 shift and go to state 9
    oracion_futuro                 shift and go to state 10
    oracion_pregunta               shift and go to state 11
    oracion_presente_perfecto      shift and go to state 12
    sujeto                         shift and go to state 13

state 3

    (4) frase -> oracion .

    SUJETO_TERCERA_PERSONA reduce using rule 4 (frase -> oracion .)
    AUXILIAR_PREGUNTA reduce using rule 4 (frase -> oracion .)
    AUXILIAR_DO     reduce using rule 4 (frase -> oracion .)
    DO_TERCERA_PERSONA reduce using rule 4 (frase -> oracion .)
    SUJETO_PRIMERA_PERSONA reduce using rule 4 (frase -> oracion .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 4 (frase -> oracion .)
    $end            reduce using rule 4 (frase -> oracion .)


state 4

    (3) frase -> palabra .

    SUJETO_TERCERA_PERSONA reduce using rule 3 (frase -> palabra .)
    AUXILIAR_PREGUNTA reduce using rule 3 (frase -> palabra .)
    AUXILIAR_DO     reduce using rule 3 (frase -> palabra .)
    DO_TERCERA_PERSONA reduce using rule 3 (frase -> palabra .)
    SUJETO_PRIMERA_PERSONA reduce using rule 3 (frase -> palabra .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 3 (frase -> palabra .)
    $end            reduce using rule 3 (frase -> palabra .)


state 5

    (41) palabra -> SUJETO .

    SUJETO_TERCERA_PERSONA reduce using rule 41 (palabra -> SUJETO .)
    AUXILIAR_PREGUNTA reduce using rule 41 (palabra -> SUJETO .)
    AUXILIAR_DO     reduce using rule 41 (palabra -> SUJETO .)
    DO_TERCERA_PERSONA reduce using rule 41 (palabra -> SUJETO .)
    SUJETO_PRIMERA_PERSONA reduce using rule 41 (palabra -> SUJETO .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 41 (palabra -> SUJETO .)
    $end            reduce using rule 41 (palabra -> SUJETO .)


state 6

    (42) palabra -> VERBO_PRESENTE .

    SUJETO_TERCERA_PERSONA reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    AUXILIAR_PREGUNTA reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    AUXILIAR_DO     reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    DO_TERCERA_PERSONA reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    SUJETO_PRIMERA_PERSONA reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 42 (palabra -> VERBO_PRESENTE .)
    $end            reduce using rule 42 (palabra -> VERBO_PRESENTE .)


state 7

    (43) palabra -> OBJETO .

    SUJETO_TERCERA_PERSONA reduce using rule 43 (palabra -> OBJETO .)
    AUXILIAR_PREGUNTA reduce using rule 43 (palabra -> OBJETO .)
    AUXILIAR_DO     reduce using rule 43 (palabra -> OBJETO .)
    DO_TERCERA_PERSONA reduce using rule 43 (palabra -> OBJETO .)
    SUJETO_PRIMERA_PERSONA reduce using rule 43 (palabra -> OBJETO .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 43 (palabra -> OBJETO .)
    $end            reduce using rule 43 (palabra -> OBJETO .)


state 8

    (5) oracion -> oracion_presente . CONECTOR oracion
    (10) oracion -> oracion_presente .

    CONECTOR        shift and go to state 21
    SUJETO_TERCERA_PERSONA reduce using rule 10 (oracion -> oracion_presente .)
    AUXILIAR_PREGUNTA reduce using rule 10 (oracion -> oracion_presente .)
    AUXILIAR_DO     reduce using rule 10 (oracion -> oracion_presente .)
    DO_TERCERA_PERSONA reduce using rule 10 (oracion -> oracion_presente .)
    SUJETO_PRIMERA_PERSONA reduce using rule 10 (oracion -> oracion_presente .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 10 (oracion -> oracion_presente .)
    $end            reduce using rule 10 (oracion -> oracion_presente .)


state 9

    (6) oracion -> oracion_pasado . CONECTOR oracion
    (11) oracion -> oracion_pasado .

    CONECTOR        shift and go to state 22
    SUJETO_TERCERA_PERSONA reduce using rule 11 (oracion -> oracion_pasado .)
    AUXILIAR_PREGUNTA reduce using rule 11 (oracion -> oracion_pasado .)
    AUXILIAR_DO     reduce using rule 11 (oracion -> oracion_pasado .)
    DO_TERCERA_PERSONA reduce using rule 11 (oracion -> oracion_pasado .)
    SUJETO_PRIMERA_PERSONA reduce using rule 11 (oracion -> oracion_pasado .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 11 (oracion -> oracion_pasado .)
    $end            reduce using rule 11 (oracion -> oracion_pasado .)


state 10

    (7) oracion -> oracion_futuro . CONECTOR oracion
    (12) oracion -> oracion_futuro .

    CONECTOR        shift and go to state 23
    SUJETO_TERCERA_PERSONA reduce using rule 12 (oracion -> oracion_futuro .)
    AUXILIAR_PREGUNTA reduce using rule 12 (oracion -> oracion_futuro .)
    AUXILIAR_DO     reduce using rule 12 (oracion -> oracion_futuro .)
    DO_TERCERA_PERSONA reduce using rule 12 (oracion -> oracion_futuro .)
    SUJETO_PRIMERA_PERSONA reduce using rule 12 (oracion -> oracion_futuro .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 12 (oracion -> oracion_futuro .)
    $end            reduce using rule 12 (oracion -> oracion_futuro .)


state 11

    (8) oracion -> oracion_pregunta . CONECTOR oracion
    (13) oracion -> oracion_pregunta .

    CONECTOR        shift and go to state 24
    SUJETO_TERCERA_PERSONA reduce using rule 13 (oracion -> oracion_pregunta .)
    AUXILIAR_PREGUNTA reduce using rule 13 (oracion -> oracion_pregunta .)
    AUXILIAR_DO     reduce using rule 13 (oracion -> oracion_pregunta .)
    DO_TERCERA_PERSONA reduce using rule 13 (oracion -> oracion_pregunta .)
    SUJETO_PRIMERA_PERSONA reduce using rule 13 (oracion -> oracion_pregunta .)
    SUJETO_SEGUNDA_PERSONA reduce using rule 13 (oracion -> oracion_pregunta .)
    $end            reduce using rule 13 (oracion -> oracion_pregunta .)


state 12

    (9) oracion -> oracion_presente_perfecto . oracion
    (14) oracion -> oracion_presente_perfecto .
    (5) oracion -> . oracion_presente CONECTOR oracion
    (6) oracion -> . oracion_pasado CONECTOR oracion
    (7) oracion -> . oracion_futuro CONECTOR oracion
    (8) oracion -> . oracion_pregunta CONECTOR oracion
    (9) oracion -> . oracion_presente_perfecto oracion
    (10) oracion -> . oracion_presente
    (11) oracion -> . oracion_pasado
    (12) oracion -> . oracion_futuro
    (13) oracion -> . oracion_pregunta
    (14) oracion -> . oracion_presente_perfecto
    (15) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (16) oracion_presente -> . sujeto AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (17) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (18) oracion_presente -> . sujeto VERBO_PRESENTE CONECTOR OBJETO
    (19) oracion_presente -> . sujeto VERBO_PRESENTE OBJETO
    (20) oracion_presente -> . sujeto VERBO_PRESENTE
    (21) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (22) oracion_presente -> . SUJETO_TERCERA_PERSONA DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (23) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (24) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA
    (25) oracion_presente -> . SUJETO_TERCERA_PERSONA VERBO_PRESENTE_TERCERA_PERSONA OBJETO
    (26) oracion_pasado -> . sujeto AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (27) oracion_pasado -> . sujeto VERBO_PASADO CONECTOR OBJETO
    (28) oracion_pasado -> . sujeto VERBO_PASADO OBJETO
    (29) oracion_pasado -> . sujeto VERBO_PASADO
    (30) oracion_pasado -> . SUJETO_TERCERA_PERSONA AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (31) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO CONECTOR OBJETO
    (32) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO OBJETO
    (33) oracion_pasado -> . SUJETO_TERCERA_PERSONA VERBO_PASADO
    (34) oracion_futuro -> . sujeto AUXILIAR_FUTURO VERBO_PRESENTE OBJETO
    (35) oracion_pregunta -> . AUXILIAR_PREGUNTA AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (36) oracion_pregunta -> . AUXILIAR_PREGUNTA DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (37) oracion_pregunta -> . AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (38) oracion_pregunta -> . DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION
    (39) oracion_presente_perfecto -> . sujeto AUXILIAR_HAVE VERBO_PARTICIPIO_PASADO
    (40) oracion_presente_perfecto -> . SUJETO_TERCERA_PERSONA AUXILIAR_HAS VERBO_PARTICIPIO_PASADO
    (44) sujeto -> . SUJETO_PRIMERA_PERSONA
    (45) sujeto -> . SUJETO_SEGUNDA_PERSONA

  ! shift/reduce conflict for SUJETO_TERCERA_PERSONA resolved as shift
  ! shift/reduce conflict for AUXILIAR_PREGUNTA resolved as shift
  ! shift/reduce conflict for AUXILIAR_DO resolved as shift
  ! shift/reduce conflict for DO_TERCERA_PERSONA resolved as shift
  ! shift/reduce conflict for SUJETO_PRIMERA_PERSONA resolved as shift
  ! shift/reduce conflict for SUJETO_SEGUNDA_PERSONA resolved as shift
    $end            reduce using rule 14 (oracion -> oracion_presente_perfecto .)
    SUJETO_TERCERA_PERSONA shift and go to state 15
    AUXILIAR_PREGUNTA shift and go to state 17
    AUXILIAR_DO     shift and go to state 14
    DO_TERCERA_PERSONA shift and go to state 16
    SUJETO_PRIMERA_PERSONA shift and go to state 18
    SUJETO_SEGUNDA_PERSONA shift and go to state 19

  ! SUJETO_TERCERA_PERSONA [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]
  ! AUXILIAR_PREGUNTA [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]
  ! AUXILIAR_DO     [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]
  ! DO_TERCERA_PERSONA [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]
  ! SUJETO_PRIMERA_PERSONA [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]
  ! SUJETO_SEGUNDA_PERSONA [ reduce using rule 14 (oracion -> oracion_presente_perfecto .) ]

    oracion_presente_perfecto      shift and go to state 12
    oracion                        shift and go to state 25
    oracion_presente               shift and go to state 8
    oracion_pasado                 shift and go to state 9
    oracion_futuro                 shift and go to state 10
    oracion_pregunta               shift and go to state 11
    sujeto                         shift and go to state 13

state 13

    (15) oracion_presente -> sujeto . AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (16) oracion_presente -> sujeto . AUXILIAR_DO AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (17) oracion_presente -> sujeto . VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (18) oracion_presente -> sujeto . VERBO_PRESENTE CONECTOR OBJETO
    (19) oracion_presente -> sujeto . VERBO_PRESENTE OBJETO
    (20) oracion_presente -> sujeto . VERBO_PRESENTE
    (26) oracion_pasado -> sujeto . AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (27) oracion_pasado -> sujeto . VERBO_PASADO CONECTOR OBJETO
    (28) oracion_pasado -> sujeto . VERBO_PASADO OBJETO
    (29) oracion_pasado -> sujeto . VERBO_PASADO
    (34) oracion_futuro -> sujeto . AUXILIAR_FUTURO VERBO_PRESENTE OBJETO
    (39) oracion_presente_perfecto -> sujeto . AUXILIAR_HAVE VERBO_PARTICIPIO_PASADO

    AUXILIAR_DO     shift and go to state 26
    VERBO_PRESENTE  shift and go to state 27
    AUXILIAR_DO_PASADO shift and go to state 28
    VERBO_PASADO    shift and go to state 29
    AUXILIAR_FUTURO shift and go to state 30
    AUXILIAR_HAVE   shift and go to state 31


state 14

    (37) oracion_pregunta -> AUXILIAR_DO . sujeto VERBO_PRESENTE INTERROGACION
    (44) sujeto -> . SUJETO_PRIMERA_PERSONA
    (45) sujeto -> . SUJETO_SEGUNDA_PERSONA

    SUJETO_PRIMERA_PERSONA shift and go to state 18
    SUJETO_SEGUNDA_PERSONA shift and go to state 19

    sujeto                         shift and go to state 32

state 15

    (21) oracion_presente -> SUJETO_TERCERA_PERSONA . DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (22) oracion_presente -> SUJETO_TERCERA_PERSONA . DO_TERCERA_PERSONA AUXILIAR_NEGACION VERBO_PRESENTE OBJETO
    (23) oracion_presente -> SUJETO_TERCERA_PERSONA . VERBO_PRESENTE CONECTOR OBJETO_PRONOMBRE
    (24) oracion_presente -> SUJETO_TERCERA_PERSONA . VERBO_PRESENTE_TERCERA_PERSONA
    (25) oracion_presente -> SUJETO_TERCERA_PERSONA . VERBO_PRESENTE_TERCERA_PERSONA OBJETO
    (30) oracion_pasado -> SUJETO_TERCERA_PERSONA . AUXILIAR_DO_PASADO AUXILIAR_NEGACION VERBO_PRESENTE CONECTOR OBJETO
    (31) oracion_pasado -> SUJETO_TERCERA_PERSONA . VERBO_PASADO CONECTOR OBJETO
    (32) oracion_pasado -> SUJETO_TERCERA_PERSONA . VERBO_PASADO OBJETO
    (33) oracion_pasado -> SUJETO_TERCERA_PERSONA . VERBO_PASADO
    (40) oracion_presente_perfecto -> SUJETO_TERCERA_PERSONA . AUXILIAR_HAS VERBO_PARTICIPIO_PASADO

    DO_TERCERA_PERSONA shift and go to state 33
    VERBO_PRESENTE  shift and go to state 34
    VERBO_PRESENTE_TERCERA_PERSONA shift and go to state 35
    AUXILIAR_DO_PASADO shift and go to state 36
    VERBO_PASADO    shift and go to state 37
    AUXILIAR_HAS    shift and go to state 38


state 16

    (38) oracion_pregunta -> DO_TERCERA_PERSONA . SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION

    SUJETO_TERCERA_PERSONA shift and go to state 39


state 17

    (35) oracion_pregunta -> AUXILIAR_PREGUNTA . AUXILIAR_DO sujeto VERBO_PRESENTE INTERROGACION
    (36) oracion_pregunta -> AUXILIAR_PREGUNTA . DO_TERCERA_PERSONA SUJETO_TERCERA_PERSONA VERBO_PRESENTE INTERROGACION

    AUXILIAR_DO     shift and go to state 40
    DO_TERCERA_PERSONA shift and go to state 41


state 18

    (44) sujeto -> SUJETO_PRIMERA_PERSONA .
